--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -10,7 +10,7 @@
 <h1 class="ui header">{{ post.title }}</h1>
 
 <!-- Autor y Fecha -->
-<p>Por {{ post.author }} a las {{ post.create_at }}</p>
+<p>Por Administrador a las {{ post.create_at }}</p>
 
 <!-- Categorías -->
 <div>
@@ -65,10 +65,19 @@
 <div class="ui comments" id="comments" style="padding-bottom: 250px;">
     {% for comment in post.comments.all %}
         <div class="comment">
+            <a class="avatar">
+                <img src="{% static 'img/avatar.jpg' %}">
+              </a>
             <div class="content">
                 <a class="author">{{ comment.author }}</a>
                 <div class="metadata">
                     <span class="date">{{ comment.created_at }}</span>
+                    {% if comment.likes_count > 0 %}
+                        <div class="rating">
+                            <i class="heart icon"></i>
+                            {{ comment.likes_count }} likes
+                        </div>
+                    {% endif %}
                 </div>
                 <div class="text">
                     {{ comment.content }}
@@ -78,7 +87,6 @@
                     <button type="submit" class="ui button">
                         <i class="heart icon"></i> Like
                     </button>
-                    {{ comment.likes_count }} likes
                 </form>
             </div>
         </div>
