--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 <!-- Título del Post -->
+{% load martortags %}
 
 {% block title %}
     {{ post.title }}
@@ -26,10 +27,13 @@
         <img src="{{ post.image.url }}" alt="{{ post.title }}" class="ui centered large image">
     {% endif %}
 
+    <div class="martor-preview">
+        <span class="ui large text justified" style="padding: 10px;">
+            {{ post.content|safe_markdown }}
+        </span>
+    </div>
     <!-- Texto del Post -->
-    <span class="ui large text justified" style="padding: 10px;">
-        {{ post.content|linebreaks }}
-    </span>
+
     
 
     <!-- Conteo de Likes y Vistas -->
@@ -92,4 +96,13 @@
         </div>
     {% endfor %}
 </div>
+{% endblock %}
+
+{% block js %}
+  <script type="text/javascript" src="{% static 'plugins/js/highlight.min.js' %}"></script>
+  <script>
+    $('.martor-preview pre').each(function(i, block){
+        hljs.highlightBlock(block);
+    });
+  </script>
 {% endblock %}
